--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
-<head></head>
+<head>
+<script>
+  
+  setTimeout(() => {
+  window.location.href = "genetec://";
+}, 2000);
+</script>
+  
+</head>
   <body><h1>
     Redirecting you to Genetec Thick Client...
   </h1></body>
