--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   
   setTimeout(() => {
   window.location.href = "genetec://";
+    console.log("redirecting"); 
 }, 2000);
+  console.log("before");
 </script>
   
 </head>
