--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 }, 2000);
   console.log("before");
 </script>
-  
+    margin: 50px;
+    border: 2px solid black;
+    padding: 15px;
+  <style>
+h1{
+
+}
+</style>
 </head>
   <body><h1>
-    Redirecting you to Genetec Thick Client...
+    Opening Genetec Security Desk... 
   </h1></body>
 </html>
