--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@ h1{
 }
 </style>
 </head>
-  <body><h1>
+<body>
+  <h1>
     Opening Genetec Security Desk... 
-  </h1></body>
+  </h1>
+  <note>
+    You must have Genetec Security Desk v5.13 installed from Software Center or Workspace 1.  This is attempting to open the thick client.
+  </note>
+  
+  </body>
 </html>
