--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     console.log("redirecting"); 
 }, 2000);
   console.log("before");
-</script>
+</script><style>
     margin: 50px;
     border: 2px solid black;
     padding: 15px;
-  <style>
+  </style>
 h1{
 
 }
