--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 }, 2000);
   console.log("before");
 </script><style>
-    margin: 50px;
-    border: 2px solid black;
-    padding: 15px;
-  </style>
-h1{
-
+    h1{
+	margin: 50px;
+    	border: 2px solid black;
+    	padding: 15px;
+    }
+note{
+	margin: 10px;
 }
-</style>
+  </style>
+
+
 </head>
 <body>
   <h1>
